--- a/exercises/Gene_Ontology.Rmd
+++ b/exercises/Gene_Ontology.Rmd
@@ -22,11 +22,19 @@ The following code installs a set of R CRAN packages used in this document -- if
 
 ```{r ready-packages, results="hide",message=FALSE}
 
-list.of.packages <- c("tidyverse", "here", "knitr", "BiocManager", "ggVennDiagram")
+if (!require("pacman")) install.packages("pacman"); library(pacman)
 
-new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
-if(length(new.packages)) install.packages(new.packages,repos = "http://cran.us.r-project.org")
-lapply(list.of.packages, require, character.only = TRUE)
+p_load("tidyverse", "here", 
+       "knitr", "readr",
+       "pander", "BiocManager", 
+       "igraph", "tidytree",
+       "dplyr", "ggVennDiagram")
+
+# list.of.packages <- c("tidyverse", "here", "knitr", "BiocManager", "ggVennDiagram")
+# 
+# new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
+# if(length(new.packages)) install.packages(new.packages,repos = "http://cran.us.r-project.org")
+# lapply(list.of.packages, require, character.only = TRUE)
 
 ```
 
@@ -43,7 +51,7 @@ if (!requireNamespace("BiocManager", quietly = TRUE))
 #     BiocManager::install("topGO")
 
 if (!requireNamespace("igraph", quietly = TRUE))
-    install.packages("clusterProfiler")
+    install.packages("igraph")
 
 # try clusterProfiler too
 if (!requireNamespace("clusterProfiler", quietly = TRUE))
