--- a/exercises/Working_with_Sequences.Rmd
+++ b/exercises/Working_with_Sequences.Rmd
@@ -24,11 +24,11 @@ p_load("tidyverse", "here",
        "pander", "BiocManager", 
        "dplyr", "stringr")
 
-list.of.packages <- c("tidyverse", "here", "knitr", "pander", "BiocManager")
-
-new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
-if(length(new.packages)) install.packages(new.packages,repos = "http://cran.us.r-project.org")
-lapply(list.of.packages, require, character.only = TRUE)
+# list.of.packages <- c("tidyverse", "here", "knitr", "pander", "BiocManager")
+# 
+# new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
+# if(length(new.packages)) install.packages(new.packages,repos = "http://cran.us.r-project.org")
+# lapply(list.of.packages, require, character.only = TRUE)
 
 ```
 
@@ -41,6 +41,46 @@ if (!requireNamespace("Rfastp", quietly = TRUE))
 
 if (!requireNamespace("ShortRead", quietly = TRUE))
     BiocManager::install("ShortRead")
+```
+
+Finally, let's get conda running on your computer. NOTE: Anaconda is already installed on computers in the computer lab. If you are using your own computer, you'll need to have conda installed ([link to learn more](https://docs.conda.io/en/main/miniconda.html))
+
+First, open a terminal window. We will copy code from below into the terminal window.
+
+```{bash initialize-conda, eval=FALSE}
+. /opt/anaconda3/bin/activate && conda init
+#. /opt/anaconda3/bin/activate && conda activate /opt/anaconda3;
+
+# run this command in terminal to make sure conda is activated
+which conda
+
+# copy these 4 lines into terminal and run them
+conda config --add channels defaults
+conda config --append channels bioconda
+conda config --append channels conda-forge
+conda config --set channel_priority strict
+
+# check channel order
+conda config --show channels
+```
+
+```{bash create-condaEnvironment, engine.opts='-l'}
+# create an enviornment for our QC packages
+if conda info --envs | grep -q QC; then echo "enviornment 'QC' already exists"; else conda create -y -n QC fastqc multiqc; fi
+
+# see available conda environments
+conda env list
+
+# activate our QC environment
+conda activate QC
+
+# make sure desired packages are working
+which fastqc
+fastqc -h
+
+which multiqc
+multiqc -h
+
 ```
 
 # Description
@@ -269,7 +309,6 @@ print(fastq.files)
 
 Now we have all of the file paths
 
-
 We can loop through all of the files to perform filtering and trimming. Note there are many arguments that can be modified. Use ?rfastp to learn more.
 
 ```{r}
@@ -315,8 +354,6 @@ for (i in 1:length(fastq.files)) {
 
 ## QC and adapters
 
-
-
 Another common tool for quality control is called FastQC, useable via command line or GUI, available at <https://www.bioinformatics.babraham.ac.uk/projects/fastqc/> or via pip or conda install in the command line.
 
 ```{bash fastqc}
@@ -355,8 +392,6 @@ One of our favorite ways to analyze multiple samples simultaneously is [MultiQC]
 ```{r multiqc file, eval=FALSE}
 browseURL("https://htmlpreview.github.io/?https://github.com/clstacy/GenomicDataAnalysis_Fa23/blob/main/outputs/fastqc/multiqc_report.html")
 ```
-
-
 
 Be sure to knit this file into a pdf or html file once you're finished.
 
